search debits and credits
