# desw/static/swagger.json
@@ -14,6 +14,52 @@
         "version": "0.0.1"
     }, 
     "paths": {
+        "/search/debit": {
+            "post": {
+                "responses": {
+                    "default": {
+                        "description": "unexpected error", 
+                        "schema": {
+                            "$ref": "#/definitions/errorModel"
+                        }
+                    }, 
+                    "200": {
+                        "description": "the User's debit(s)", 
+                        "schema": {
+                            "items": {
+                                "$ref": "#/definitions/Debit"
+                            }, 
+                            "type": "array"
+                        }
+                    }
+                }, 
+                "description": "", 
+                "parameters": [
+                    {
+                        "required": false, 
+                        "in": "body", 
+                        "description": "The Debit(s) you'd like to get.", 
+                        "name": "searchcd", 
+                        "schema": {
+                            "$ref": "#/definitions/SearchCD"
+                        }
+                    }
+                ], 
+                "summary": "Get one or more debit(s) for a single User.", 
+                "security": [
+                    {
+                        "kid": []
+                    }, 
+                    {
+                        "typ": []
+                    }, 
+                    {
+                        "alg": []
+                    }
+                ], 
+                "operationId": "searchDebits"
+            }
+        }, 
         "/debit": {
             "post": {
                 "responses": {
@@ -55,6 +101,41 @@
                     }
                 ], 
                 "operationId": "sendMoney"
+            }
+        }, 
+        "/balance": {
+            "get": {
+                "operationId": "getBalance", 
+                "description": "Currently no search parameters are supported. All balances returned.", 
+                "security": [
+                    {
+                        "kid": []
+                    }, 
+                    {
+                        "typ": []
+                    }, 
+                    {
+                        "alg": []
+                    }
+                ], 
+                "responses": {
+                    "default": {
+                        "description": "unexpected error", 
+                        "schema": {
+                            "$ref": "#/definitions/errorModel"
+                        }
+                    }, 
+                    "200": {
+                        "description": "the User's balance(s)", 
+                        "schema": {
+                            "items": {
+                                "$ref": "#/definitions/Balance"
+                            }, 
+                            "type": "array"
+                        }
+                    }
+                }, 
+                "summary": "Get the latest balance(s) for a single User."
             }
         }, 
         "/user": {
@@ -217,10 +298,38 @@
                 "operationId": "getAddress"
             }
         }, 
-        "/balance": {
-            "get": {
-                "operationId": "getBalance", 
-                "description": "Currently no search parameters are supported. All balances returned.", 
+        "/search/credit": {
+            "post": {
+                "responses": {
+                    "default": {
+                        "description": "unexpected error", 
+                        "schema": {
+                            "$ref": "#/definitions/errorModel"
+                        }
+                    }, 
+                    "200": {
+                        "description": "the User's credit(s)", 
+                        "schema": {
+                            "items": {
+                                "$ref": "#/definitions/Credit"
+                            }, 
+                            "type": "array"
+                        }
+                    }
+                }, 
+                "description": "", 
+                "parameters": [
+                    {
+                        "required": false, 
+                        "in": "body", 
+                        "description": "The Credit(s) you'd like to get.", 
+                        "name": "searchcd", 
+                        "schema": {
+                            "$ref": "#/definitions/SearchCD"
+                        }
+                    }
+                ], 
+                "summary": "Get one or more credit(s) for a single User.", 
                 "security": [
                     {
                         "kid": []
@@ -232,24 +341,7 @@
                         "alg": []
                     }
                 ], 
-                "responses": {
-                    "default": {
-                        "description": "unexpected error", 
-                        "schema": {
-                            "$ref": "#/definitions/errorModel"
-                        }
-                    }, 
-                    "200": {
-                        "description": "the User's balance(s)", 
-                        "schema": {
-                            "items": {
-                                "$ref": "#/definitions/Balance"
-                            }, 
-                            "type": "array"
-                        }
-                    }
-                }, 
-                "summary": "Get the latest balance(s) for a single User."
+                "operationId": "searchCredits"
             }
         }
     }, 
@@ -283,26 +375,32 @@
     }, 
     "host": "0.0.0.0:8002", 
     "definitions": {
-        "IntUserSetting": {
+        "SearchCD": {
+            "title": "SearchCD", 
+            "type": "object", 
             "properties": {
-                "createtime": {
+                "currency": {
                     "type": "string", 
-                    "format": "date-time"
+                    "maxLength": 4
                 }, 
-                "value": {
-                    "type": "integer"
+                "ref_id": {
+                    "type": "string", 
+                    "maxLength": 256
                 }, 
                 "id": {
                     "type": "integer", 
                     "description": "primary key"
+                }, 
+                "network": {
+                    "type": "string", 
+                    "maxLength": 64
+                }, 
+                "address": {
+                    "type": "string", 
+                    "maxLength": 64
                 }
             }, 
-            "required": [
-                "value"
-            ], 
-            "type": "object", 
-            "description": "An Int Setting applied to a User", 
-            "title": "IntUserSetting"
+            "description": "Search pattern for a Credit or Debit."
         }, 
         "Balance": {
             "title": "Balance", 
@@ -312,7 +410,6 @@
                 "currency"
             ], 
             "type": "object", 
-            "description": "A user's balance in a single currency. Only the latest record is valid.", 
             "properties": {
                 "available": {
                     "type": "integer"
@@ -339,51 +436,8 @@
                     "type": "integer", 
                     "description": "primary key"
                 }
-            }
-        }, 
-        "StrUserSetting": {
-            "properties": {
-                "createtime": {
-                    "type": "string", 
-                    "format": "date-time"
-                }, 
-                "value": {
-                    "type": "string", 
-                    "maxLength": 320
-                }, 
-                "id": {
-                    "type": "integer", 
-                    "description": "primary key"
-                }
             }, 
-            "required": [
-                "value"
-            ], 
-            "type": "object", 
-            "description": "A Setting applied to a User", 
-            "title": "StrUserSetting"
-        }, 
-        "DateTimeUserSetting": {
-            "properties": {
-                "createtime": {
-                    "type": "string", 
-                    "format": "date-time"
-                }, 
-                "value": {
-                    "type": "string", 
-                    "format": "date-time"
-                }, 
-                "id": {
-                    "type": "integer", 
-                    "description": "primary key"
-                }
-            }, 
-            "required": [
-                "value"
-            ], 
-            "type": "object", 
-            "description": "A Setting applied to a User", 
-            "title": "DateTimeUserSetting"
+            "description": "A user's balance in a single currency. Only the latest record is valid."
         }, 
         "Address": {
             "title": "Address", 
@@ -392,7 +446,6 @@
                 "network"
             ], 
             "type": "object", 
-            "description": "A payment network Address or account number.", 
             "properties": {
                 "network": {
                     "type": "string", 
@@ -422,33 +475,8 @@
                     "type": "integer", 
                     "description": "primary key"
                 }
-            }
-        }, 
-        "KeyPermission": {
-            "properties": {
-                "permission": {
-                    "type": "string"
-                }, 
-                "description": {
-                    "type": "string", 
-                    "maxLength": 320
-                }, 
-                "name": {
-                    "type": "string", 
-                    "maxLength": 80
-                }, 
-                "id": {
-                    "type": "integer", 
-                    "description": "primary key"
-                }
             }, 
-            "required": [
-                "permission", 
-                "name"
-            ], 
-            "type": "object", 
-            "description": "A Key Permission", 
-            "title": "KeyPermission"
+            "description": "A payment network Address or account number."
         }, 
         "Credit": {
             "title": "Credit", 
@@ -462,7 +490,6 @@
                 "ref_id"
             ], 
             "type": "object", 
-            "description": "A Credit, which adds tokens to a User's Balance.", 
             "properties": {
                 "network": {
                     "type": "string", 
@@ -503,36 +530,15 @@
                     "type": "integer", 
                     "description": "primary key"
                 }
-            }
-        }, 
-        "Setting": {
-            "properties": {
-                "value_type": {
-                    "enum": [
-                        "str", 
-                        "int", 
-                        "date-time"
-                    ], 
-                    "type": "string", 
-                    "maxLength": 9
-                }, 
-                "name": {
-                    "type": "string", 
-                    "maxLength": 80
-                }, 
-                "description": {
-                    "type": "string", 
-                    "maxLength": 320
-                }
             }, 
-            "required": [
-                "name"
-            ], 
-            "type": "object", 
-            "description": "A Setting", 
-            "title": "Setting"
+            "description": "A Credit, which adds tokens to a User's Balance."
         }, 
         "User": {
+            "description": "A User", 
+            "required": [
+                "username"
+            ], 
+            "type": "object", 
             "properties": {
                 "username": {
                     "type": "string", 
@@ -551,11 +557,6 @@
                     "format": "date-time"
                 }
             }, 
-            "required": [
-                "username"
-            ], 
-            "type": "object", 
-            "description": "A User", 
             "title": "User"
         }, 
         "Debit": {
@@ -567,7 +568,6 @@
                 "network"
             ], 
             "type": "object", 
-            "description": "A Debit, which subtracts tokens from a User's Balance.", 
             "properties": {
                 "network": {
                     "type": "string", 
@@ -608,7 +608,8 @@
                     "type": "integer", 
                     "description": "primary key"
                 }
-            }
+            }, 
+            "description": "A Debit, which subtracts tokens from a User's Balance."
         }, 
         "UserKey": {
             "title": "UserKey", 
@@ -617,6 +618,7 @@
                 "keytype"
             ], 
             "type": "object", 
+            "description": "A User's API key", 
             "properties": {
                 "deactivated_at": {
                     "type": "string", 
@@ -651,8 +653,7 @@
                     "type": "string", 
                     "format": "date-time"
                 }
-            }, 
-            "description": "A User's API key"
+            }
         }, 
         "errorModel": {
             "required": [
